--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,9 @@ canvas{
 .theGame{
     display: flex;
     justify-content: center;
+    position: absolute;
     width: 100%;
+    height: 100%;
 }
 
 .theScore{
