--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+body{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+}
+
 
 canvas{
     border: 1px solid lightgray;
